# copier

./: .gitignore  CMakeLists.txt  event.cpp  fibers.cpp  fibers.h  file.h  main.cpp  vcpkg.json
cmake/modules/: FindGflags.cmake
patch/: 0001-feature-folly-with-liburing.patch
